--- a/LaTeX/formatting-instructions-latex-2018.tex
+++ b/LaTeX/formatting-instructions-latex-2018.tex
@@ -134,7 +134,7 @@ We did four experiments for the four parameters. Here is the setup for the exper
 \end{itemize}
 
 \begin{center}
-  \includegraphics[width=\columnwidth]{lstm_parameters.png}
+  \includegraphics[width=\columnwidth]{../Plots/lstm_parameters.png}
   \captionof{figure}{Parameter tuning for LSTM model,dash line for RMSE of train set, solid line for test set}
 \end{center}
 
@@ -214,13 +214,13 @@ It was out of our expectation that
 % Plots should be redrawn without main title since we have them on the bottom.
 \begin{center}
 \centering
-\includegraphics[width=\columnwidth]{Compare_runtime.jpeg}
+\includegraphics[width=\columnwidth]{../Plots/Compare_runtime.jpeg}
 \captionof{figure}{Runtime of different methods in seconds}
 \end{center}
 
 \begin{center}
 \centering
-\includegraphics[width=\columnwidth]{Compare_mse.jpeg}
+\includegraphics[width=\columnwidth]{../Plots/Compare_mse.jpeg}
 \captionof{figure}{MSE of different methods}
 \end{center}
 
@@ -235,13 +235,13 @@ From Figure cite[] and Figure [cite], which show the different performance of NB
 
 \begin{center}
 \centering
-\includegraphics[width=\columnwidth]{NBSVM_unclean_clean.jpeg}
+\includegraphics[width=\columnwidth]{../Plots/NBSVM_unclean_clean.jpeg}
 \captionof{figure}{MSE of cleaned and uncleaned dataset}
 \end{center}
 
 \begin{center}
 \centering
-\includegraphics[width=\columnwidth]{NBSVM_runtime_sample.jpeg}
+\includegraphics[width=\columnwidth]{../Plots/NBSVM_runtime_sample.jpeg}
 \captionof{figure}{Runtime of cleaned and uncleaned dataset}
 \end{center}
 
