--- a/LaTeX/bibfile.bib
+++ b/LaTeX/bibfile.bib
@@ -21,3 +21,16 @@
   journal={arXiv preprint arXiv:1412.6277},
   year={2014}
 }
+@article{rennie2001improving,
+  title={Improving multiclass text classification with the support vector machine},
+  author={Rennie, Jason DM and Rifkin, Ryan},
+  year={2001}
+}
+@inproceedings{pang2002thumbs,
+  title={Thumbs up?: sentiment classification using machine learning techniques},
+  author={Pang, Bo and Lee, Lillian and Vaithyanathan, Shivakumar},
+  booktitle={Proceedings of the ACL-02 conference on Empirical methods in natural language processing-Volume 10},
+  pages={79--86},
+  year={2002},
+  organization={Association for Computational Linguistics}
+}
