--- a/LaTeX/formatting-instructions-latex-2018.tex
+++ b/LaTeX/formatting-instructions-latex-2018.tex
@@ -63,7 +63,7 @@ First, we clean the data set and extract the train and test set from cleaned dat
 
 \subsection{Logistic Regression}
 
-multinomial logistic regression is a classification method that generalizes logistic regression to multiclass problems, i.e. with more than two possible discrete outcomes. That is, it is a model that is used to predict the probabilities of the different possible outcomes of a categorically distributed dependent variable, given a set of independent variables (which may be real-valued, binary-valued, categorical-valued, etc.).
+multinomial logistic regression(LR) is a classification method that generalizes logistic regression to multiclass problems, i.e. with more than two possible discrete outcomes. That is, it is a model that is used to predict the probabilities of the different possible outcomes of a categorically distributed dependent variable, given a set of independent variables (which may be real-valued, binary-valued, categorical-valued, etc.).
 
 Multinomial logistic regression is known by a variety of other names, including polytomous LR, multiclass LR, softmax regression, multinomial logit, maximum entropy (MaxEnt) classifier, conditional maximum entropy model.
 
@@ -199,31 +199,57 @@ Index & $\text{Word}_1$ & $\text{Word}_2$ & ... & $\text{Word}_{50000}$ \\ [0.5e
 \end{table}
 
 \section{Model Evaluation}
-We compared the methods described in the last section in regard of time, prediction accuracy and memory usage. Several interesting issues revealed themselves during the evaluation which will be discussed in the upcoming part of this section. It is noticeable that not every method had been run multiple times, such as Xgboost and LSTM, due to their exhaustive runtime. Furthermore, we excluded the a thorough evaluation of SVM in this section since the results of SVM on small datasets were performing far worse than the other methods in regard of accuracy and runtime. This is an interesting contradiction to our prior believe suggested by [cite] and [cite] and we believe that a more careful study on this phenomenon should be introduced.8
+We compared the methods described in the last section in regard of time, prediction accuracy and memory usage. Several interesting issues revealed themselves during the evaluation which will be discussed in the upcoming part of this section. It is noticeable that not every method had been run multiple times, such as Xgboost and LSTM, due to their exhaustive runtime. Furthermore, we excluded the a thorough evaluation of SVM in this section since the results of SVM on small datasets were performing far worse than the other methods in regard of accuracy and runtime. This is an interesting contradiction to our prior believe suggested by \cite{rennie2001improving} and \cite{pang2002thumbs} and we believe that a more careful study on this phenomenon should be introduced.8
 
 % Subsection
+% There is still a problem with \ref{}
 \subsection{Execution time and Prediction Accuracy}
-There is a trade off between accuracy and speed as shown in Figure [cite] and Figure [cite]. However, this conclusion doesn't hold rigidly since we excluded SVM in our evaluation. We've run SVM on a train size of 50,000 and after running it about 5 hours, the MSE of the prediction were about 2.0082, which means that SVM took 300 times longer than the NB or NBSVM yet yielding a far worse MSE than the two methods under the same training size. Although we believe that the prediction performance of SVM will increase if a larger training set is used, we couldn't convince ourself that it could exceed the accuracy of either NB or NBSVM within a reasonable time. In general, we could observe that computational more demanding algorithms do better in prediction.
+There is a trade off between accuracy and speed as shown in Figure \ref{fig:runtime} and Figure \ref{fig:mse}. However, this conclusion doesn't hold rigidly since we excluded SVM in our evaluation. We've run SVM on a train size of 50,000 and after running it about 5 hours, the MSE of the prediction were about 2.0082, which means that SVM took 300 times longer than the NB or NBSVM yet yielding a far worse MSE than the two methods under the same training size. Although we believe that the prediction performance of SVM will increase if a larger training set is used, we couldn't convince ourself that it could exceed the accuracy of either NB or NBSVM within a reasonable time. In general, we could observe that computational more demanding algorithms do better in prediction.
 
-It was out of our expectation that 
-
-% Write more after we have more results!
+It was out of our expectation that both NB and SVM, which we believed would do better in text classification, performed particularly poor among all the methods we've tested. On the contrary, LR 
 
 
 % The plots look a bit awful and we should adjust them in our final version.
 % Plots should be redrawn without main title since we have them on the bottom.
 \begin{center}
 \centering
+\label{fig:runtime}
 \includegraphics[width=\columnwidth]{../Plots/Compare_runtime.jpeg}
 \captionof{figure}{Runtime of different methods in seconds}
 \end{center}
 
 \begin{center}
 \centering
+\label{fig:mse}
 \includegraphics[width=\columnwidth]{../Plots/Compare_mse.jpeg}
 \captionof{figure}{MSE of different methods}
 \end{center}
 
+\begin{table}
+\centering
+\caption{Runtime of different methods in seconds}
+\label{table:runtime}
+\begin{tabular}{l | lllll}
+      & 50,000 & 100,000 & 500,000 & 1,000,000 & 1,300,000 \\ \hline
+LR    & 25.84  & 30.49   & 80.85   & 141.24    & 203.03    \\
+NB    & 39.62  & 50.66   & 125.71  & 219.25    & 269.72    \\
+NBSVM & 62.34  & 95.78   & 416.81  & 783.34    & 1065.07   \\
+LSTM  & 831.24 & 1386.66 & 5965.16 & 11154.41  & 14388.02 
+\end{tabular}
+\end{table}
+
+\begin{table}]
+\centering
+\caption{MSE of different methods}
+\label{table:mse}
+\begin{tabular}{l | lllll}
+      & 50,000 & 100,000 & 500,000 & 1,000,000 & 1,300,000 \\ \hline
+LR    & 0.7067 & 0.6808  & 0.6433  & 0.6334    & 0.6310    \\
+NB    & 1.1731 & 1.1154  & 1.0310  & 1.0288    & 1.0324    \\
+NBSVM & 0.7540 & 0.7019  & 0.6050  & 0.5704    & 0.5594    \\
+LSTM  & 1.4039 & 0.9714  & 0.6245  & 0.5078    & 0.3585   
+\end{tabular}
+\end{table}
 
 % Subsection
 \subsection{Memory Usage}
@@ -231,18 +257,20 @@ It was out of our expectation that
 
 % Subsection
 \subsection{Other Findings}
-From Figure cite[] and Figure [cite], which show the different performance of NBSVM using the cleaned and uncleaned dataset as input, indicate that the usage of the cleaned dataset decreased the MSE but increased the speed of the model. A similar issue happened in NB. It could be argued that using a more complicated dataset which holds all information would yield better prediction results therefore no cleaning should be carried out before applying the models. However, the fact is the accuracy only increased for about 15\% in exchange of a decrease of 55\% of the speed (when the training size is 1,300,000). This implicates that cleaning the dataset denoised the data a lot yet retained most of the information and it suggests that it might be possible that the accuracy could be improved if we cleaned the dataset more carefully and still speeding up the whole process. 
+From Figure \ref{fig:mse_unclean} and Figure \ref{fig:runtime_unclean}, which show the different performance of NBSVM using the cleaned and uncleaned dataset as input, indicate that the usage of the cleaned dataset decreased the MSE but increased the speed of the model. A similar issue happened in NB. It could be argued that using a more complicated dataset which holds all information would yield better prediction results therefore no cleaning should be carried out before applying the models. However, the fact is the accuracy only increased for about 15\% in exchange of a decrease of 55\% of the speed (when the training size is 1,300,000). This implicates that cleaning the dataset denoised the data a lot yet retained most of the information and it suggests that it might be possible that the accuracy could be improved if we cleaned the dataset more carefully and still speeding up the whole process. 
 
 \begin{center}
 \centering
 \includegraphics[width=\columnwidth]{../Plots/NBSVM_unclean_clean.jpeg}
 \captionof{figure}{MSE of cleaned and uncleaned dataset}
+\label{fig:mse_unclean}
 \end{center}
 
 \begin{center}
 \centering
 \includegraphics[width=\columnwidth]{../Plots/NBSVM_runtime_sample.jpeg}
 \captionof{figure}{Runtime of cleaned and uncleaned dataset}
+\label{fig:runtime_unclean}
 \end{center}
 
 \bibliography{bibfile}
