--- a/LaTeX/bibfile.bib
+++ b/LaTeX/bibfile.bib
@@ -34,3 +34,11 @@
   year={2002},
   organization={Association for Computational Linguistics}
 }
+@inproceedings{he2016ups,
+  title={Ups and downs: Modeling the visual evolution of fashion trends with one-class collaborative filtering},
+  author={He, Ruining and McAuley, Julian},
+  booktitle={proceedings of the 25th international conference on world wide web},
+  pages={507--517},
+  year={2016},
+  organization={International World Wide Web Conferences Steering Committee}
+}
