--- a/LaTeX/formatting-instructions-latex-2018.tex
+++ b/LaTeX/formatting-instructions-latex-2018.tex
@@ -202,13 +202,13 @@ Index & $\text{Word}_1$ & $\text{Word}_2$ & ... & $\text{Word}_{50000}$ \\ [0.5e
 
 %No data on XGBoost: we might need to delete XGBoost
 \section{Model Evaluation}
-We compared the methods described in the last section in regard of time, prediction accuracy and memory usage. Several interesting issues revealed themselves during the evaluation which will be discussed in the upcoming part of this section. It is noticeable that not every method had been run multiple times, such as XGBoost and LSTM, due to their exhaustive runtime. Furthermore, we excluded the a thorough evaluation of SVM in this section since the results of SVM on small datasets were performing far worse than the other methods in regard of accuracy and runtime. This is an interesting contradiction to our prior believe suggested by \cite{rennie2001improving} and \cite{pang2002thumbs} and we believe that a more careful study on this phenomenon should be introduced.
+We compared the methods described in the last section in regard of time, prediction accuracy and memory usage. All models were run on a laptop with an i7 CPU with 16GB DDR4 memory. Several interesting issues revealed themselves during the evaluation which will be discussed in the upcoming part of this section. It is noticeable that not every method had been run multiple times, such as XGBoost and LSTM, due to their exhaustive runtime. Furthermore, we excluded the a thorough evaluation of SVM in this section since the results of SVM on small datasets were performing far worse than the other methods in regard of accuracy and runtime. This is an interesting contradiction to our prior believe suggested by \cite{rennie2001improving} and \cite{pang2002thumbs} and we believe that a more careful study on this phenomenon should be introduced.
 
 % Subsection
 \subsection{Execution time and Prediction Accuracy}
 There is a trade off between accuracy and speed as shown in Figure \ref{fig:runtime} and Figure \ref{fig:mse}. However, this conclusion doesn't hold rigidly since we excluded SVM in our evaluation. We've run SVM on a trainsize of 50,000 and after running it about 5 hours, the MSE of the prediction were about 2.0082, which means that SVM took 300 times longer than the NB or NBSVM yet yielding a far worse MSE than the two methods under the same training size. Although we believe that the prediction performance of SVM will increase if a larger training set is used, we couldn't convince ourself that it could exceed the accuracy of either NB or NBSVM within a reasonable time. In general, we could observe that computational more demanding algorithms do better in prediction.
 
-It was out of our expectation that both NB and SVM, which we believed would do better in text classification, performed particularly poor among all the methods we've tested. On the contrary, LR proved to be an outstanding method in text sentiment classification. As shown in Figure \ref{fig:runtime}, \ref{fig:mse} and Table \ref{tab:runtime}, \ref{tab:mse}, LR is the fastest and the most accurate model with small training sizes. NBSVM becomes only competitive with relatively large training sizes.
+It was out of our expectation that both NB and SVM, which we believed would do better in text classification, performed particularly poor among all the methods we've tested. On the contrary, LR proved to be an outstanding method in text sentiment classification. As shown in Figure \ref{fig:runtime}, \ref{fig:mse} and Table \ref{tab:runtime}, \ref{tab:mse}, LR is the fastest and the most accurate model with small training sizes while NBSVM becomes only competitive with relatively large training sizes over 500,000. However, when the training size grows, the accuracy of LSTM becomes increasingly better. As shown in Figure \ref{fig:mse}, though LSTM classifies poorly with small training sets, its accuracy increases dramatically if more training sets are available. The figure also suggests that if providing more training data, LSTM has still a huge potential for improvement since the slope of the change of MSE is far steeper than all other methods and it seems that LSTM hasn't reached a turning point. Of course, LSTM is the slowest model as shown in Figure \ref{fig:runtime} and this is why we consider NBSVM to be competitive over LSTM. From the tables we could observe that NBSVM is the second accurate model but is about 10 times faster than LSTM. Therefore, in cases where speed more important while accuracy still counts, NBSVM would be an ideal choice of model. 
 
 
 % The plots look a bit awful and we should adjust them in our final version.
