--- a/LaTeX/bibfile.bib
+++ b/LaTeX/bibfile.bib
@@ -42,3 +42,23 @@
   year={2016},
   organization={International World Wide Web Conferences Steering Committee}
 }
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT Press}
+}
+@article{park2007penalized,
+  title={Penalized logistic regression for detecting gene interactions},
+  author={Park, Mee Young and Hastie, Trevor},
+  journal={Biostatistics},
+  volume={9},
+  number={1},
+  pages={30--50},
+  year={2007},
+  publisher={Oxford University Press}
+}
